--- a/網頁製作/rank.html
+++ b/網頁製作/rank.html
@@ -1,8 +1,10 @@
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>rank</title>
 <meta charset="utf-8">
 <link rel="stylesheet"  href="styles.css">
+<script type="text/javascript" src="rank.js"></script>
+
 
 </head>
 
@@ -23,18 +25,30 @@
     </ul>
   </div>
   <div class="dropdown_list">
-    <form>
+    
+    <input type = "checkbox" id = "korean" onclick="tf(korean)" > 韓式
+    <input type = "checkbox" id = "japan" > 日式
+    <input type = "checkbox" id = "taiwan" > 中式
+    <input type = "checkbox" id = "american" > 美式
 
-<input type="checkbox" value="Travel" name="Interest"> 旅遊<br>
-<input type="checkbox" value="Movie" name="Interest"> 電影<br>
-<input type="checkbox" value="Food" name="Interest"> 美食
-　...
+    <button id = "enter" onclick="select()">確認</button>
 
-</form>
+ 
+
   </div>
     <div class="main">
-    <h1>introduction</h1>
-    <p>我叫周淵修</p>
+    
+
+    <ul style ="list-style-type: none ">
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+      <li><a href="index.html""><img src="buffet.jpg" width="100px" height="100px">響食天堂</a></li>
+    </ul>
+
   </div>
 </div>
 <div class="footer">
